--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
         <div id="logo" class="nav_logo ">
             <a href="./index.html" class="d-flex align-items-center">
-                <img src="assets/logos/react.png" alt="My Portfolio | Abid A" width="50" class="LogoImage">
+                <!-- <img src="assets/logos/react.png" alt="My Portfolio | Abid A" width="50" class="LogoImage"> -->
                 <span class="logo_name">Ameet V</span>
             </a>
         </div>
