whole heros section

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     
     <!-- This section is for contact us directly on WhatsApp  -->
     <!-- desktop view   -->
-    <div class="whatsapp d-none d-md-block">
+    <!-- <div class="whatsapp d-none d-md-block">
         <a href="https://wa.link/41otry" target="_blank" class=""><i class="bi bi-whatsapp" style="font-size: 24px; margin: 0px 4px 0px 0px;"></i> <span>Chat With Me 🚀</span></a>
-    </div>
+    </div> -->
 
     <!-- mobile view whatsapp  -->
-    <div class="whatsapp d-block d-md-none">
+    <!-- <div class="whatsapp d-block d-md-none">
         <a href="https://wa.link/41otry" target="_blank" class=""><i class="bi bi-whatsapp" style="font-size: 30px; margin: 0px 4px 0px 0px;"></i></a>
-    </div>
+    </div> -->
 
     <!-- This section is for contact us directly on Top  -->
     <!-- desktop view   -->
-    <div class="top d-none d-md-block">
+    <!-- <div class="top d-none d-md-block">
         <a href="#" class=""><span>🔝</span></a>
-    </div>
+    </div> -->
 
 <!-- Here I am going to start my personal portfoilo navigation which is used to navigate to the different section of my portfolio. -->
 
@@ -66,9 +66,25 @@
   </nav>
   <!-- NavBar global end  -->
 
-  <div class="direct-links ">
-    <i class="fa-brands fa-github" style="color: #FFF;"></i>
 
+  <!-- left - side -->
+  <div class="direct-links ">
+    <div class="left-links ">
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-linkedin-in"></i>
+    <i class="fa-brands fa-whatsapp"></i>
+</div>
+  </div>
+
+  <!-- left - side -->
+  <div class="right-email">
+    <div class="right-mail">
+        <p class="mail-text"><a class="right-a" href="#">
+            ameetVish.webdev@gmail.com</a>
+        </p>
+    </div>
   </div>
 
   <!-- Ameet hero section start-->
@@ -76,11 +92,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
-            <div class="col-md-11 t ext-left text-white hero-text">
+            <div class="col-md-11 col-12 text-left text-white hero-text">
                <div class="hero-1txt my-3"> Hi, my name is</div>
                <div class="name">Ameet V.</div>
                <div class="head-para">I build things for the web.</div>
-               <div class="head-para2">I’m a software engineer specializing in building (and occasionally<br> designing) exceptional digital experiences. Currently, I’m focused on<br> building accessible, human-centered products at <a class="link" href="#">Upstatement</a>.</div>
+               <div class="head-para2">I’m a software engineer specializing in building (and occasionally<br> designing) exceptional digital experiences. Currently, I’m focused on<br> building accessible, human-centered products at <a class="link text-ani" href="#">Upstatement</a>.</div>
 
                <div class="button-div pt-5">
                 <a class="button-new check" href="/resume.pdf" target="_blank" rel="noopener noreferrer">Checkout Me</a>
