--- a/index.html
+++ b/index.html
@@ -51,15 +51,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="navbar-links d-block d-lg-flex flex-grow-1 justify-content-end align-items-center mx-0">
-            <a class="nav-link active " aria-current="page" href="#"><span class="nav-no">01.</span> Home</a>
-            <a class="nav-link " aria-current="page" href="#about-up"><span class="nav-no">02.</span> About</a>
-            <a class="nav-link " aria-current="page" href="#project-up"><span class="nav-no">03.</span> Projects</a>
-            <!-- <a class="nav-link " aria-current="page" href="#skill-up"><span class="nav-no">04.</span> Skills</a> -->
-            <a class="nav-link " aria-current="page" href="#contact-up"><span class="nav-no">05.</span> Contact</a>
+            <a class="nav-link active " aria-current="page" href="#"><span class="nav-no">01.</span> About</a>
+            <a class="nav-link " aria-current="page" href="#about-up"><span class="nav-no">02.</span> Experience</a>
+            <a class="nav-link " aria-current="page" href="#project-up"><span class="nav-no">03.</span> Work</a>
+            <a class="nav-link " aria-current="page" href="#contact-up"><span class="nav-no">04.</span> Contact</a>
             <a class="resume-button" href="/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
-            <!-- <div class="btns">
-                <a href="#" class="" download=""><button class="resume border-0 px-3 py-2 rounded-2 me-2">Resume <i class="bi bi-cloud-download"></i></button></a>
-            </div> -->
         </div>
       </div>
     </div>  
@@ -81,7 +77,7 @@
   <!-- left - side -->
   <div class="right-email">
     <div class="right-mail">
-        <p class="mail-text"><a class="right-a" href="#">
+        <p class="mail-text"><a class="right-a" href="mailto:ameet131999@gmail.com">
             ameetVish.webdev@gmail.com</a>
         </p>
     </div>
@@ -99,13 +95,33 @@
                <div class="head-para2">I’m a software engineer specializing in building (and occasionally<br> designing) exceptional digital experiences. Currently, I’m focused on<br> building accessible, human-centered products at <a class="link text-ani" href="#">Upstatement</a>.</div>
 
                <div class="button-div pt-5">
-                <a class="button-new check" href="/resume.pdf" target="_blank" rel="noopener noreferrer">Checkout Me</a>
+                <button class="button-new check" href="/resume.pdf" target="_blank">Checkout Me and my work!</button>
                </div>
             </div>
         </div>
     </div>
   </section>
+
   <!-- Ameet hero section ends-->
+
+  <!-- Ameet about section start-->
+  <section class="about my-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-7 text-white">
+                <h4>Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</h3>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/icons/global-location.png">
+            </div>
+            <!-- <div class="col-md-1"></div> -->
+        </div>
+    </div>
+  </section>
+   <!-- Ameet about section ends-->
+
+  
 
   <!-- First section which contain the name and designation with image  -->
 <!-- <section class="main-content-box mb-5" >
